# tradertracker

./: .env.example  .gitignore  apply_patches.py  audit_financials.py  geocode_companies.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: kpi_report.xlsx
tradertracker/: dashboard.py  pipeline.py
