[project]
name = "tradertracker"
version = "0.1.0"
description = "KPI analysis for Danish energy trading companies via Virk CVR API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "duckdb>=1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "streamlit>=1.35",
    "plotly>=5.20",
]

[project.scripts]
tradertracker = "tradertracker.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradertracker"]
